opam-version: "2.0"
name: "binaryen_dsl"
version: "0.5"
synopsis: "Writing Webassembly text format in DSL"
description: """
This library helps you to write Webassembly text format(WAT) in OCaml source code with DSL. It helps you to write a code generator for your language to WASM.

You can generate it with [Binaryen](https://github.com/WebAssembly/binaryen).
"""
maintainer: "Vincent Chan <okcdz@diverse.space>"
authors: "Vincent Chan <okcdz@diverse.space>"
license: "MIT"
homepage: "https://github.com/vincentdchan/ocaml-binaryen-dsl"
bug-reports: "https://github.com/vincentdchan/ocaml-binaryen-dsl/issues"
dev-repo: "git+https://github.com/vincentdchan/ocaml-binaryen-dsl.git"
depends: [
  "ocaml"
  "core"
  "dune" {>= "2.8"}
  "ctypes"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]