(library
 (name binaryen_dsl)
 (public_name binaryen_dsl)
 (libraries bindings core_kernel ctypes libbinaryen.c)
 (foreign_stubs
  (language c)
  (names b)
  (flags :standard -Wno-incompatible-pointer-types))
 (c_library_flags :standard -lstdc++ -lpthread))

(rule
 (targets b.ml)
 (action (run ./stub_gen/stub_gen.exe)))

(rule
 (targets b.c)
 (action (run ./stub_gen/stub_gen.exe -c)))
